Template finished for desktop

--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -5,6 +5,8 @@
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
     <IsPackable>false</IsPackable>
+    <AssemblyName>CRD-React</AssemblyName>
+    <RootNamespace>CRD-React</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +20,32 @@
   <ItemGroup>
     <!-- Files not to publish (note that the 'dist' subfolders are re-added below) -->
     <Content Remove="ClientApp\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="ClientApp\components\index.tsx" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\components\index.tsx" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\dist\img\a1_s3.png" />
+    <None Include="wwwroot\dist\img\a1_s4.png" />
+    <None Include="wwwroot\dist\img\a1_s5.png" />
+    <None Include="wwwroot\dist\img\a2_s3.png" />
+    <None Include="wwwroot\dist\img\a2_s4.png" />
+    <None Include="wwwroot\dist\img\a2_s5.png" />
+    <None Include="wwwroot\dist\img\a3_s3.png" />
+    <None Include="wwwroot\dist\img\a_s2.png" />
+    <None Include="wwwroot\dist\img\a_s3.png" />
+    <None Include="wwwroot\dist\img\bg_s1.png" />
+    <None Include="wwwroot\dist\img\bg_s1_xl.png" />
+    <None Include="wwwroot\dist\img\bg_s3.png" />
+    <None Include="wwwroot\dist\img\bg_s5.png" />
+    <None Include="wwwroot\dist\img\l_center.png" />
+    <None Include="wwwroot\dist\img\l_tech.png" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
