--- a/WebApplication1/package.json
+++ b/WebApplication1/package.json
@@ -44,6 +44,10 @@
     "url-loader": "0.5.9",
     "webpack": "2.5.1",
     "webpack-hot-middleware": "2.18.2",
-    "webpack-merge": "4.1.0"
+    "webpack-merge": "4.1.0",
+    "react-loading": "^1.0.1",
+    "video-react": "^0.8.9",
+    "typed": "^0.3.3",
+    "react-typist": "^2.0.4"
   }
 }
